@@ -32,14 +32,20 @@
 
 static void lh79520_timer_init (void)
 {
-  RCPC_PERIPHCLKCTRL &= ~RCPC_PERIPHCLK_RTC_MASK;
-  RCPC_PERIPHCLKCTRL |=  RCPC_PERIPHCLK_RTC_32KHZ;
+  RCPC_CTRL	     |=  RCPC_CTRL_UNLOCK;
+  RCPC_PERIPHCLKSEL  &= ~RCPC_PERIPHCLKSEL_RTC_MASK;
+  RCPC_PERIPHCLKSEL  |=  RCPC_PERIPHCLKSEL_RTC_32KHZ;
+  RCPC_PERIPHCLKCTRL &= ~RCPC_PERIPHCLK_RTC;
+  RCPC_CTRL	     &= ~RCPC_CTRL_UNLOCK;
 }
 
 static void lh79520_timer_release (void)
 {
-  RCPC_PERIPHCLKCTRL &= ~RCPC_PERIPHCLK_RTC_MASK;
-  RCPC_PERIPHCLKCTRL |=  RCPC_PERIPHCLK_RTC_1HZ;
+  RCPC_CTRL          |=  RCPC_CTRL_UNLOCK;
+  RCPC_PERIPHCLKSEL  &= ~RCPC_PERIPHCLKSEL_RTC_MASK;
+  RCPC_PERIPHCLKSEL  |=  RCPC_PERIPHCLKSEL_RTC_1HZ;
+  RCPC_PERIPHCLKCTRL |=  RCPC_PERIPHCLK_RTC;
+  RCPC_CTRL	     &= ~RCPC_CTRL_UNLOCK;
 }
 
 unsigned long timer_read (void)
